--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,11 +9,16 @@
     <string name="profile">Profile</string>
     <string name="logout">Logout</string>
     <string name="welcome">Hello %s!</string>
-    <string name="welcomeP">Welcome to your profile %s!</string>
+    <string name="welcomeP">~ %s ~</string>
     <string name="information">Here you can find your information:</string>
     <string name="user_id">User ID:</string>
     <string name="birthdate">Birth Date:</string>
     <string name="genre">Genre:</string>
-    <string name="most_played_category">Most Played Category:</string>
-    <string name="challenges_won">Challenges won:</string>
+    <string name="most_played_category">Most Played\nCategory:</string>
+    <string name="challenges_won">Challenges\nwon:</string>
+    <string name="birthdate_text">%s %s %s</string>
+    <string name="categories">%s (%d)</string>
+    <string name="categories_text">Choose a category:</string>
+    <string name="lobby_text1">Press the button when everyone is ready!</string>
+    <string name="lobby_text2">Wait for the other players!</string>
 </resources>
