thread syncronization for http request and trivia challenge activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="categories_text">Choose a category:</string>
     <string name="lobby_text1">Press the button when everyone is ready!</string>
     <string name="lobby_text2">Wait for the other players!</string>
+    <string name="trivia_description">Player needs to answer questions until he makes a mistake\nWatch the screen to know when it\'s your turn</string>
 
 
     <string name="FCM_PREF">com.example.lorry.login_registerform.fcm_pref</string>
