--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="lobby_text2">Wait for the other players!</string>
     <string name="turn_text">%s\nWatch the screen to know when it\'s your turn!</string>
     <string name="voice_hz">Voice HZ Detector</string>
+    <string name="dncstp">Dance and Stop</string>
     <string name="feedback_text">Did you enjoyed the challenge?\nGive us your feedback!</string>
     <string name="feedback_support">Thanks for your support!</string>
     <string name="fitness">Fitness Challenge:</string>
@@ -33,5 +34,6 @@
     <string name="hub_ip">Hub IP:</string>
     <string name="port">Port:</string>
     <string name="settings">Settings</string>
+    <string name="danceinfo">The rules are simple: Dance when the music is on or just stop!</string>
 
 </resources>
